Add auth service to check login status and re-sign the jwt token if expired
