# career-quest-api/public/api/swagger/swagger.json
@@ -2396,13 +2396,14 @@
 							"application/json": {
 								"schema": {
 									"properties": {
-										"token": {},
+										"token": {
+											"type": "string"
+										},
 										"message": {
 											"type": "string"
 										}
 									},
 									"required": [
-										"token",
 										"message"
 									],
 									"type": "object"
@@ -2518,6 +2519,100 @@
 						"schema": {
 							"format": "double",
 							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/api/v1/auth/status": {
+			"get": {
+				"operationId": "CheckLoginStatus",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"user": {
+											"properties": {
+												"ResetPasswordToken": {
+													"type": "string"
+												},
+												"UpdatedAt": {
+													"type": "string",
+													"format": "date-time"
+												},
+												"CreatedAt": {
+													"type": "string",
+													"format": "date-time"
+												},
+												"Gender": {
+													"type": "string"
+												},
+												"Phone": {
+													"type": "string"
+												},
+												"Address": {
+													"type": "string"
+												},
+												"Password": {
+													"type": "string"
+												},
+												"Email": {
+													"type": "string"
+												},
+												"Username": {
+													"type": "string"
+												},
+												"UserId": {
+													"type": "number",
+													"format": "double"
+												}
+											},
+											"required": [
+												"ResetPasswordToken",
+												"UpdatedAt",
+												"CreatedAt",
+												"Gender",
+												"Phone",
+												"Address",
+												"Password",
+												"Email",
+												"Username",
+												"UserId"
+											],
+											"type": "object"
+										},
+										"token": {
+											"type": "string"
+										},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"user",
+										"token",
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Auth"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "header",
+						"name": "Authorization",
+						"required": false,
+						"schema": {
+							"type": "string"
 						}
 					}
 				]
